--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "pg": "^8.13.0",
-    "prisma": "^5.20.0"
+    "prisma": "^5.20.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
