--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@prisma/client": "^5.20.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
